# ompi_test

./: .gitignore  compile_commands.json
.cache/clangd/index/: accelerator.h.A3D1BE73022792C3.idx  argv.h.007EA86C671B1094.idx  atomic.h.55A66D6AE5BA71F7.idx  atomic.h.5A4C075B08AC1F75.idx  atomic.h.854E59A100F68B4E.idx  atomic_impl_minmax_math.h.94CEDEA10A3663A8.idx  atomic_impl_ptr_cswap.h.2DEF1A6C02C4763F.idx  atomic_impl_spinlock.h.C0F0027F13BA9F64.idx  atomic_ucx.h.32FE106C9AF6D37F.idx  atomic_ucx_component.c.71CE6C8F618ABF6A.idx  atomic_ucx_cswap.c.FFBD17E59625DA12.idx  atomic_ucx_module.c.7EB9C8CFC1756E9E.idx  attribute.h.0E569E81874CB909.idx  base.h.11F9E1B3B530F56E.idx  base.h.2E0EF20697AADF91.idx  base.h.42D0825FC066EBBF.idx  base.h.499FA9DDC80D4E94.idx  base.h.4B5DD327DCC8D55E.idx  base.h.51B4C7A649194FC4.idx  base.h.6322E7B7AC677D8B.idx  base.h.66BDB11212416149.idx  base.h.6C1F57CB0221F48D.idx  base.h.6E57AF0B0F43C8A7.idx  base.h.9CA13FF8AB6C983B.idx  base.h.A5BB8E6E9151264A.idx  base.h.B87708130F60B89B.idx  base.h.C6839EAADD350BCE.idx  bit_ops.h.86B9C8BCC92397B4.idx  btl.h.5D52A250F7C71A8C.idx  btl_base_error.h.629345E4081650A2.idx  btl_uct.h.670DF9D6C18DA02A.idx  btl_uct_am.c.98F43E31EFC346BB.idx  btl_uct_am.h.473BD7AD77D037BE.idx  btl_uct_amo.c.F3DE0E2A35D75038.idx  btl_uct_component.c.03BA3EF73F1F4123.idx  btl_uct_device_context.h.BC9963207E38100B.idx  btl_uct_endpoint.c.B0EB75CEAC326919.idx  btl_uct_endpoint.h.23AFBF1033F47764.idx  btl_uct_frag.c.931BFCB6DE139900.idx  (+167 more)
ompi/mca/coll/swift/: Makefile.am  coll_swift_allreduce.c
(+10 files in other folders)
