#
# dist_ompidata_DATA = base/help-mca-coll-base.txt
#
# headers += \
# 				swift/coll_swift_allreduce.h
#         base/base.h \
#         base/coll_tags.h \
#         base/coll_base_topo.h \
#         base/coll_base_util.h \
#         base/coll_base_functions.h
#
# libmca_coll_la_SOURCES += \
# 				swift/coll_swift_allreduce.c\
#         base/coll_base_comm_select.c \
#         base/coll_base_comm_unselect.c \
#         base/coll_base_find_available.c \
#         base/coll_base_frame.c \
#         base/coll_base_bcast.c \
#         base/coll_base_scatter.c \
#         base/coll_base_topo.c \
#         base/coll_base_allgather.c \
#         base/coll_base_allgatherv.c \
#         base/coll_base_util.c \
#         base/coll_base_allreduce.c \
#         base/coll_base_alltoall.c \
#         base/coll_base_gather.c \
#         base/coll_base_alltoallv.c \
#         base/coll_base_reduce.c \
#         base/coll_base_barrier.c \
#         base/coll_base_reduce_scatter.c \
#         base/coll_base_reduce_scatter_block.c \
#         base/coll_base_exscan.c \
#         base/coll_base_scan.c
#
# if WANT_FT_MPI
# libmca_coll_la_SOURCES += \
#         base/coll_base_agree_noft.c
# endif # WANT_FT_MPI
#
